# hani_replica

./: .env.example  .gitleaks.toml  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: gitleaks.yml  tests.yml
docs/: com.engram.bot.plist  com.engram.daily.plist
scripts/: cron_daily_briefing.sh  daily_briefing.py  daily_delta_sync.py  full_sync_pipeline.py  run_bot.py  run_mcp_server.py
src/: config.py
src/bot/: app.py  audit.py  conversation.py  event_handlers.py  executor.py  feedback_loop.py  formatters.py  heartbeat.py  intent_router.py  proactive_settings.py  security.py  tools.py  user_memory.py
src/bot/actions/: __init__.py  calendar_actions.py  email_actions.py
src/bot/agents/: __init__.py  base.py  calendar_agent.py  email_agent.py  github_agent.py  orchestrator.py  research_agent.py
src/bot/handlers/: __init__.py  briefing.py  calendar.py  chat.py
src/ideaspark/: agent.py  deep_research.py  literature.py
src/indexers/: __init__.py  notion_indexer.py  todoist_indexer.py
src/integrations/: __init__.py  gcalendar.py  gdocs.py  github_client.py  gmail.py  google_auth.py  google_multi.py  notion_client.py  todoist_client.py  zotero_client.py
src/mcp/: __init__.py  client.py  server.py
tests/: test_agents.py  test_chat_handler.py  test_config.py  test_conversation.py  test_event_handlers_actions.py  test_executor.py  test_feedback_loop.py  test_github_client.py  test_heartbeat.py  test_intent_router.py  test_mcp_client.py  test_mcp_server.py  test_proactive_settings.py  test_security.py  test_tools.py  test_user_memory.py
